--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "html-to-text": "^9.0.5",
     "jimp": "^0.22.12",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^5.0.6"
+    "nanoid": "^5.0.6",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
